 - browser.div(:id => "id").table.tr is same as browser.div(:id => "id").table(:index => 0).tr(:index => 0)
* all collection methods accept now specifiers too:
 - browser.divs(:class => "someclass").each {|div| puts div.class_name} # => "someclass"
* removed FormElement class
* added aliases:
 - tr => row
 - trs => rows
 - td => cell
 - tds => cells
 - a => link
 - as => links 

== Version 1.9.3 - 2011/07/24

* Only FireWatir version released to make a dependency for commonwatir to be less strict to make it possible to use FireWatir together with Watir 2+ versions if needed.

== Version 1.9.2 - 2011/07/11

=== IE improvements
* Bump RAutomation dependency version to 0.6.2 to:
 - fix/improve Watir::IE#send_keys.
 - fix Watir::IE loading for certain Windows XP environments (http://jira.openqa.org/browse/WTR-484).
* Restored Watir::IE#autoit method to use RAutomation's AutoIt adapter with a deprecation warning.
* Cache IE.version result to not access registry with each execution - was causing slowness in TextField#set for example.
* Do not raise UnknownObjectException if parent element doesn't exist when calling Element#exists?
* Element#flash highlights elements again (http://jira.openqa.org/browse/WTR-478)

== Version 1.9.1 - 2011/06/30

* Bug fixes for IE9

== Version 1.9.0 - 2011/06/15

* Added support for IE9
* Updated watir/ie for Ruby 1.8.7 and are no longer supporting Ruby 1.8.6.
  * Using RAutomation instead of Autoit, WinClicker and the WindowHelper
  * New implementation of ie.file_field
  * Replaced ie.dialog with ie.javascript_dialog
  * Recompiled win32ole for 1.8.7 mingw and removed win32ole for 1.8.6


== Version 1.8.1 - 2011/04/08

=== IE improvements

* Added #frames method (Ivan Kabluchkov).
* Added Frame#exists?, #src, #name and other Element methods (Ivan Kabluchkov).
* Added multiple locators support for #frame method (Ivan Kabluchkov).
* Added *_no_wait methods (Ivan Kabluchkov).

=== Firefox improvements

* Nothing

=== General improvements
